Fix: jQuery 3 compatibility. jQuery 3 now doesn't include the scrollbar height in `outerHeight` (see jQuery issue #3193). The fix uses DOM methods rather than jQuery so it will work in all browsers and versions of jQuery.
Sync to source repo @da4af4a9360615457da7a6c5572b736df8eede5d

--- a/css/fixedColumns.bootstrap4.css
+++ b/css/fixedColumns.bootstrap4.css
@@ -47,6 +47,10 @@ div.DTFC_Blocker {
   background-color: white;
 }
 
-table.dataTable.table-striped.DTFC_Cloned tbody {
+table.dataTable.table-striped.DTFC_Cloned tbody tr:nth-of-type(odd) {
+  background-color: #F3F3F3;
+}
+
+table.dataTable.table-striped.DTFC_Cloned tbody tr:nth-of-type(even) {
   background-color: white;
 }
